--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run tests
         run: |
           cd tests
-          lua -l luacov InventoryTests.lua
+          lua -l luacov InventoryTest.lua
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
