--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -68,6 +68,8 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
+        with:
+          files: ./tests/luacov.stats.out
 
       - name: WoW Packager
         uses: BigWigsMods/packager@v1
