--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -57,7 +57,9 @@ jobs:
 
       - name: Run tests
         working-directory: ./tests
-        run: lua -l luacov InventoryTest.lua
+        run: |
+          lua -l luacov InventoryTest.lua
+          lua -l luacov test_character.lua
         env:
           GAME_VERSION: ${{ matrix.game_version }}
 
