--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -2,13 +2,15 @@ name: Test and package
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers the workflow on push or pull request events
   push:
-    branches: [ master ]
+    branches:
+      - '*'
     tags:
       - '**'
   pull_request:
-    branches: [ master ]
+    branches:
+      - '*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
