--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -61,6 +61,8 @@ jobs:
         working-directory: ./tests
         run: |
           lua -lluacov InventoryTest.lua
+          lua -lluacov EquipmentTest.lua
+          lua -lluacov ContainerTest.lua
           lua -lluacov test_character.lua
           lua -lluacov test_character_methods.lua
         env:
