Remove tests from package

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -86,11 +86,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Get build utils
-        uses: actions/checkout@v3
-        with:
-          repository: Beast-Masters-addons/build_utils
-          path: tests/build_utils
+      - name: Remove tests from package
+        run: git rm -rf tests
 
       - name: WoW Packager
         uses: BigWigsMods/packager@v2.1.0
