--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -23,15 +23,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        game_version: [ 'classic', 'wrath', 'retail' ]
+        game_version: [ 'classic', 'cata', 'retail' ]
 
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Get build utils
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: Beast-Masters-addons/build_utils
           path: tests/build_utils
@@ -48,7 +48,7 @@ jobs:
         run: luacheck addon --no-self --no-unused
 
       - name: Build the addon
-        uses: BigWigsMods/packager@v2.0.11
+        uses: BigWigsMods/packager@v2.3.1
         with:
           args: -g ${{ matrix.game_version }} -z -d
 
@@ -70,7 +70,9 @@ jobs:
           GAME_VERSION: ${{ matrix.game_version }}
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   build:
     runs-on: ubuntu-latest
@@ -84,15 +86,15 @@ jobs:
       WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Remove tests from package
         run: git rm -rf tests
 
       - name: WoW Packager
-        uses: BigWigsMods/packager@v2.1.0
+        uses: BigWigsMods/packager@v2.3.1
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: LibInventory
           path: .release
